# ros2_learn

./: .gitignore  quick_fix_ros2.sh  test.txt
chapt2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
chapt2/chapt2_ws/src/demo_cpp_pkg/src/: learn_functional.cpp  learn_lambda.cpp  learn_thread.cpp  person_node.cpp
chapt2/chapt2_ws/src/demo_python_pkg/: setup.py
chapt2/chapt2_ws/src/demo_python_pkg/demo_python_pkg/: learn_thread.py  person_node.py  python_node.py  writer_node.py
chapt2/chapt2_ws/src/novels/: novels1.txt  novels2.txt  novels3.txt
chapt2/cpp/: CMakeLists.txt  ros2.cpp
chapt2/pkgs/demo_cpp_pkg/: CMakeLists.txt
chapt2/py/: ros2_python.py
chapt2/py/demo_python_pkg/: package.xml  setup.py
chapt3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chapt3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
chapt3/topic_ws/src/demo_python_topic/: package.xml  setup.py
chapt3/topic_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_pub_node_back.py  novel_sub_node.py
chapt3/topic_ws/src/status_display/: CMakeLists.txt  package.xml
chapt3/topic_ws/src/status_display/src/: hello_qt.cpp  status_display_node.cpp
chapt3/topic_ws/src/status_interfaces/: CMakeLists.txt  package.xml
chapt3/topic_ws/src/status_interfaces/msg/: SystemStatus.msg
chapt3/topic_ws/src/status_publisher/: package.xml  setup.py
chapt3/topic_ws/src/status_publisher/status_publisher/: status_pub.py
chapt4/chapt4_ws/src/chapt4_interfaces/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/chapt4_interfaces/srv/: FaceDetector.srv
chapt4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/demo_cpp_service/launch/: actions.launch.py  demo.launch.py
chapt4/chapt4_ws/src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
chapt4/chapt4_ws/src/demo_python_service/: package.xml  setup.py
chapt4/chapt4_ws/src/demo_python_service/demo_python_service/: face_detection_client.py  face_detection_node.py  learn_face_detect.py
chapt4/chapt4_ws/src/demo_python_service/launch/: demo.launch.py
chapt5/chapt5_ws/src/demo_cpp_tf/: CMakeLists.txt  package.xml
chapt5/chapt5_ws/src/demo_cpp_tf/src/: static_tf_broadcast.cpp  tf_broadcast.cpp  tf_listener.cpp
chapt5/chapt5_ws/src/demo_python_tf/: package.xml  setup.py
chapt5/chapt5_ws/src/demo_python_tf/demo_python_tf/: static_tf_broadcast.py  tf_broadcast.py  tf_listener.py
chapt6/chapt6_ws/src/robot_description/: CMakeLists.txt  package.xml
chapt6/chapt6_ws/src/robot_description/config/: default.rviz
chapt6/chapt6_ws/src/robot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
chapt6/chapt6_ws/src/robot_description/urdf/: first_robot.gv
chapt6/chapt6_ws/src/robot_description/xacro/: first_robot.xacro  robot_ros2_control.xacro
chapt6/chapt6_ws/src/robot_description/xacro/tracer/: camera.xacro  chassis.xacro  imu.xacro  (+4 more)
chapt7/chapt7_ws/: README.md
chapt7/chapt7_ws/src/autopatrol_interfaces/: CMakeLists.txt  package.xml
chapt7/chapt7_ws/src/autopatrol_robot/: package.xml  setup.py
chapt7/chapt7_ws/src/autopatrol_robot/autopatrol_robot/: patrol_node.py  speaker.py
chapt7/chapt7_ws/src/autopatrol_robot/config/: patrol_config.yaml
chapt7/chapt7_ws/src/robot_application/: package.xml  setup.cfg  setup.py
chapt7/chapt7_ws/src/robot_application/robot_application/: get_robot_pose.py  nav_to_pose.py  waypoint_follower.py
chapt7/chapt7_ws/src/robot_description/: CMakeLists.txt
chapt7/chapt7_ws/src/robot_description/config/: gazebo.rviz  robot_ros2_controller.yaml
chapt7/chapt7_ws/src/robot_description/launch/: gazebo_sim.launch.py
chapt7/chapt7_ws/src/robot_description/urdf/: first_robot.urdf
chapt7/chapt7_ws/src/robot_navigation/: CMakeLists.txt  package.xml
chapt7/chapt7_ws/src/robot_navigation/config/: my_navigation.rviz  nav2_params.yaml
chapt7/chapt7_ws/src/robot_navigation/launch/: navigation2.launch.py  online_async_launch.py
chapt8/chapt8_ws/src/motion_control_system/: package.xml
chapt8/chapt8_ws/src/motion_control_system/src/: test_plugin.cpp
chapt8/chapt8_ws/src/nav2_custom_controller/: package.xml
chapt8/chapt8_ws/src/nav2_custom_controller/src/: custom_controller.cpp
chapt8/chapt8_ws/src/nav2_custom_planner/: CMakeLists.txt  package.xml
chapt8/chapt8_ws/src/nav2_custom_planner/src/: nav2_custom_planner.cpp
chapt9/chapt9_ws/: fishbot.md
chapt9/chapt9_ws/src/fishbot_bringup/: CMakeLists.txt  package.xml
chapt9/chapt9_ws/src/fishbot_bringup/launch/: bringup.launch.py  bringup_quick.launch.py
chapt9/chapt9_ws/src/fishbot_bringup/src/: odom2tf.cpp
chapt9/chapt9_ws/src/fishbot_camera/: README.md  package.xml  setup.cfg  setup.py
chapt9/chapt9_ws/src/fishbot_camera/config/: fishbot_camera.yaml
chapt9/chapt9_ws/src/fishbot_camera/fishbot_camera/: camera_driver.py
chapt9/chapt9_ws/src/fishbot_cartographer/: CMakeLists.txt  package.xml
chapt9/chapt9_ws/src/fishbot_cartographer/config/: cartographer.rviz  fishbot_2d.lua  fishbot_laser_2d.lua
chapt9/chapt9_ws/src/fishbot_cartographer/launch/: cartographer.launch.py
chapt9/chapt9_ws/src/fishbot_description/: CMakeLists.txt  package.xml
chapt9/chapt9_ws/src/fishbot_description/urdf/: fishbot.urdf
chapt9/chapt9_ws/src/fishbot_navigation2/: CMakeLists.txt  package.xml
chapt9/chapt9_ws/src/fishbot_navigation2/config/: ekf.yaml
chapt9/chapt9_ws/src/fishbot_navigation2/launch/: navigation2.launch.py  odom_ekf.launch.py
chapt9/chapt9_ws/src/fishbot_navigation2/maps/: fishbot_map.pgm  fishbot_map.yaml  show_pgm.py
chapt9/chapt9_ws/src/fishbot_navigation2/param/: fishbot.yaml
chapt9/chapt9_ws/src/ydlidar_ros2/: CMakeLists.txt
chapt9/chapt9_ws/src/ydlidar_ros2/launch/: ydlidar_launch.py
chapt9/chapt9_ws/src/ydlidar_ros2/params/: ydlidar.yaml
chapt9/chapt9_ws/src/ydlidar_ros2/sdk/: CMakeLists.txt
chapt9/chapt9_ws/src/ydlidar_ros2/sdk/core/common/: ydlidar_config.h  ydlidar_help.h
chapt9/chapt9_ws/src/ydlidar_ros2/sdk/src/: CYdLidar.cpp
chapt9/chapt9_ws/src/ydlidar_ros2/src/: ydlidar_node.cpp
(+9 files in other folders)
